[tool.poetry]
name = "unasyncer"
version = "0.0.1"
description = "CLI to \"unasync\" your python code."

authors = ["Nik Sidnev <sidnev.nick@gmail.com>"]
repository = "https://github.com/nsidnev/unasyncer"

readme = "README.md"

license = "MIT"


[tool.poetry.scripts]
unasyncer = "unasyncer.cli:cli"


[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.1.1"
importlib-metadata = { version = "^1.6.0", python = "<= 3.7"}


[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"

wemake-python-styleguide = "^0.14.0"
mypy = "^0.770"

pytest = "~5.3"
pytest-cov = "^2.8.1"
pytest-asyncio = "^0.10.0"

toml = "^0.10.0"


[tool.black]
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
)/
'''


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
